# shinya

./: Cargo.toml  README.md
src/: main.rs
src/commands/: math.rs  meta.rs  mod.rs  moderation.rs  owner.rs
src/reactions/: reaction_handler.rs
src/structures/: cmd_data.rs  commands.rs  mod.rs
