[package]
name = "shinya"
version = "0.1.0"
authors = ["xenoglyph5300 <77850449+xenoglyph5300@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
rand = "0.8"
rust-clock = "0.1.0"
base64 = "0.13.0"
uuid = { version = "0.8", features = ["v4"] }
dashmap = "4.0.1"
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
regex = "1.4.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2" # needed so intrument works with async functions.

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "current"
default-features = true
features = ["model", "collector", "native_tls_backend", "voice"]

[dependencies.tokio]
version = "1.0"
features = ["rt-multi-thread", "macros", "process", "time"]

[dependencies.sqlx]
git = "https://github.com/ant32/sqlx"
branch = "tokio-1.0"
default-features = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "offline"]
